k8s/chat-v2/00-namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: chat
  labels:
    name: chat
---
apiVersion: v1
kind: Namespace
metadata:
  name: monitoring
  labels:
    monitoring: prometheus
---
apiVersion: v1
kind: Namespace
metadata:
  name: ingress-nginx
  labels:
    name: ingress-nginx
